delete extra text re: image thumbs

--- a/index.html
+++ b/index.html
@@ -200,8 +200,7 @@ P    X          F                K       J              F      J     Y      5   
                 {{#students}}
                 <li class="col-sm-3 student thumb">
                   <div class="block">
-<!--                     <p class="{{_id}}">Somehow we need to feed an image here... and match it with the ID: {{_id}}</p> -->
-                    <img src="img/thumbnails/{{_id}}.jpg" />
+                    <img src="img/thumbnails/{{_id}}.jpg" /> <!-- decent start to thumbnails -->
                     <div class="info">
                       <h4 class="name">{{firstname}} {{lastname}}</h4>
                       <p class="program">{{program}}</p>
