--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Basic MFA site Template to get started</title>
+    <title>MICA Grad Show 2014</title>
 
 <!--
 Y                   T             5       X           0       I         0           H
