link to google maps...

--- a/index.html
+++ b/index.html
@@ -167,22 +167,22 @@ P    X          F                K       J              F      J     Y      5   
                 <ul id="galleries-data">
                     <li><h4>Bunting Center</h4></li>
                     <li><h5>Pinkard Gallery</h5></li>
-                    <li><p>1305 W. Mount Royal Ave. <br/>Baltimore, MD 21217</p></li>
+                    <li><p><a href="https://www.google.com/maps/place/1303+W+Mt+Royal+Ave/@39.3078058,-76.6210689,17z/data=!3m1!4b1!4m2!3m1!1s0x89c804bf73e1a755:0x4c39bbe55ec440a1">1305 W. Mount Royal Ave. <br/>Baltimore, MD 21217</a></p></li>
                     <li><h4>Fox Building</h4></li>
                     <li><h5>Decker Gallery</h5></li>
                     <li><h5>Fox 3 Gallery</h5></li>
                     <li><h5>Meyerhoff Gallery</h5></li>
-                    <li><p>1303 W. Mount Royal Ave. <br/>Baltimore, MD 21217</p></li>
+                    <li><p><a href="https://www.google.com/maps/place/1303+W+Mt+Royal+Ave/@39.3078058,-76.6210689,17z/data=!3m1!4b1!4m2!3m1!1s0x89c804bf73e1a755:0x4c39bbe55ec440a1">1303 W. Mount Royal Ave. <br/>Baltimore, MD 21217</a></p></li>
                     <li><h4>Studio Center</h4></li>
                     <li><h5>Riggs Gallery</h5></li>
                     <li><h5>Leidy Gallery</h5></li>
-                    <li><p>131 W. North Ave. <br/>Baltimore, MD 21201</p></li>
+                    <li><p><a href="https://www.google.com/maps/place/131+W+North+Ave/@39.310547,-76.618941,17z/data=!3m1!4b1!4m2!3m1!1s0x89c804c03b3ac339:0xb9849904ae9381af">131 W. North Ave. <br/>Baltimore, MD 21201</a></p></li>
                     <li><h4>D Center</h4></li>
                     <li><h5>D Center Gallery</h5></li>
-                    <li><p>18 W. North Ave. <br/>Baltimore, MD 21218</p></li>
+                    <li><p><a href="https://www.google.com/maps/place/18+W+North+Ave/@39.3111576,-76.6171982,17z/data=!3m1!4b1!4m2!3m1!1s0x89c804ea61df87b5:0xfb5919f46f01192">18 W. North Ave. <br/>Baltimore, MD 21218</a></p></li>
                     <li><h4>Off Campus</h4></li>
                     <li><h5>Curatorial Practice</h5></li>
-                    <li><p>Curatorial Students take over individual galleries all across Baltimore. View the Curatorial Map »</p></li>
+                    <li><p>Curatorial Students take over individual galleries all across Baltimore. <a href="pdf/########tk">View the Curatorial Map »</a></p></li>
                 </ul>
               </div>
             </section>
