better map locations

--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@ P    X          F                K       J              F      J     Y      5   
                 <ul id="galleries-data">
                     <li><h4>Bunting Center</h4></li>
                     <li><h5>Pinkard Gallery</h5></li>
-                    <li><p><a href="https://www.google.com/maps/place/1303+W+Mt+Royal+Ave/@39.3078058,-76.6210689,17z/data=!3m1!4b1!4m2!3m1!1s0x89c804bf73e1a755:0x4c39bbe55ec440a1">1305 W. Mount Royal Ave. <br/>Baltimore, MD 21217</a></p></li>
+                    <li><p><a href="https://www.google.com/maps/place/Bunting+Building/@39.3080133,-76.621262,18z/data=!4m2!3m1!1s0x0:0x6541b717da384fd8">1305 W. Mount Royal Ave. <br/>Baltimore, MD 21217</a></p></li>
                     <li><h4>Fox Building</h4></li>
                     <li><h5>Decker Gallery</h5></li>
                     <li><h5>Fox 3 Gallery</h5></li>
                     <li><h5>Meyerhoff Gallery</h5></li>
-                    <li><p><a href="https://www.google.com/maps/place/1303+W+Mt+Royal+Ave/@39.3078058,-76.6210689,17z/data=!3m1!4b1!4m2!3m1!1s0x89c804bf73e1a755:0x4c39bbe55ec440a1">1303 W. Mount Royal Ave. <br/>Baltimore, MD 21217</a></p></li>
+                    <li><p><a href="https://www.google.com/maps/place/Decker+and+Meyerhoff+Galleries/@39.3080133,-76.621262,18z/data=!4m2!3m1!1s0x0:0x6e7b0c3da90d8dd1">1303 W. Mount Royal Ave. <br/>Baltimore, MD 21217</a></p></li>
                     <li><h4>Studio Center</h4></li>
                     <li><h5>Riggs Gallery</h5></li>
                     <li><h5>Leidy Gallery</h5></li>
