--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 {{#students}}
                 <li class="col-sm-3 student thumb">
                   <div class="block">
-                    <p>Somehow we need to feed an image here... and match it with the ID: {{id}}</p>
+                    <p>{{showdate}} Somehow we need to feed an image here... and match it with the ID: {{id}}</p>
                     <div class="info">
                       <h4 class="name">{{firstname}} {{lastname}}</h4>
                       <p class="program">{{program}}</p>
