Put the show date in the correct place

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ P    X          F                K       J              F      J     Y      5   
                       <h4 class="name">{{firstname}} {{lastname}}</h4>
                       <p class="program">{{program}}</p>
                       <p class="exhibitionlocation">{{exhibitionlocation}}</p>
-                      <p class="show-date">Print out show date?</p>
+                      <p class="show-date">{{showdate}}</p>
                     </div>
                   </div>
                 </li>
