Show date filter

--- a/index.html
+++ b/index.html
@@ -117,10 +117,14 @@ P    X          F                K       J              F      J     Y      5   
                       <button type="button" data-type="gallery" class="btn btn-default dropdown-toggle sort-studentlist" data-toggle="dropdown">
                         <a href="#">Show Date </a><span class="caret"></span>
                       </button>
-                      <ul class="dropdown-menu" id="gallery-filter">
-                        <li><a href="#" data-gallery="D center">Today</a></li>
-                        <li><a href="#" data-gallery="Decker">Tomorrow</a></li>
-                        <li><a href="#" data-gallery="Fox">NEVER</a></li>
+                      <ul class="dropdown-menu" id="showdate-filter">
+                        <li><a href="#" data-showdate="1/24/2014">1/24/2014</a></li>
+                        <li><a href="#" data-showdate="1/31/2014">1/31/2014</a></li>
+                        <li><a href="#" data-showdate="3/28/2014">3/28/2014</a></li>
+                        <li><a href="#" data-showdate="4/11/2014">4/11/2014</a></li>
+                        <li><a href="#" data-showdate="4/23/2014">4/23/2014</a></li>
+                        <li><a href="#" data-showdate="4/25/2014">4/25/2014</a></li>
+                        <li><a href="#" data-showdate="5/3/2014">5/3/2014</a></li>
                       </ul>
                     </div>
                   </li>
@@ -201,7 +205,7 @@ P    X          F                K       J              F      J     Y      5   
                       <h4 class="name">{{firstname}} {{lastname}}</h4>
                       <p class="program">{{program}}</p>
                       <p class="exhibitionlocation">{{exhibitionlocation}}</p>
-                      <p class="show-date">{{showdate}}</p>
+                      <p class="show-date showdate">{{showdate}}</p>
                     </div>
                   </div>
                 </li>
