--- a/index.html
+++ b/index.html
@@ -90,9 +90,21 @@ P    X          F                K       J              F      J     Y      5   
                       <button type="button" data-type="gallery" class="btn btn-default dropdown-toggle sort-studentlist" data-toggle="dropdown">
                         <a href="#">Program </a><span class="caret"></span>
                       </button>
-                      <ul class="dropdown-menu" id="gallery-filter">
-                        <li><a href="#" data-gallery="D center">Graphic Design</a></li>
-                        <li><a href="#" data-gallery="Decker">Not Graphic Design</a></li>
+                      <ul class="dropdown-menu" id="program-filter">
+                        <li><a href="#" data-program="Community Arts">Community Arts</a></li>
+                        <li><a href="#" data-program="Critical Studies">Critical Studies</a></li>
+                        <li><a href="#" data-program="Curatorial">Curatorial</a></li>
+                        <li><a href="#" data-program="Graphic Design">Graphic Design</a></li>
+                        <li><a href="#" data-program="Hoffberger">Hoffberger</a></li>
+                        <li><a href="#" data-program="Illustration Practice">Illustration Practice</a></li>
+                        <li><a href="#" data-program="MA Teaching">MA Teaching</a></li>
+                        <li><a href="#" data-program="Mount Royal">Mount Royal</a></li>
+                        <li><a href="#" data-program="Photo & Electronic Media">Photo & Electronic Media</a></li>
+                        <li><a href="#" data-program="Photo & Electronic Media">Photo & Electronic Media</a></li>
+                        <li><a href="#" data-program="Post Bac FA">Post Bac FA</a></li>
+                        <li><a href="#" data-program="Post Bac GD">Post Bac GD</a></li>
+                        <li><a href="#" data-program="Rinehart">Rinehart</a></li>
+                        <li><a href="#" data-program="Social Design">Social Design</a></li> 
                       </ul>
                     </div>
                   </li>
