--- a/index.html
+++ b/index.html
@@ -218,6 +218,7 @@ P    X          F                K       J              F      J     Y      5   
                       <p class="program">{{program}}</p>
                       <p class="exhibitionlocation">{{exhibitionlocation}}</p>
                       <p class="show-date showdate">{{showdate}}</p>
+                      <p class="id" style="display:none">{{id}}</p>
                     </div>
                   </div>
                 </li>
@@ -246,6 +247,13 @@ P    X          F                K       J              F      J     Y      5   
       </div>
     </footer>
 
+    <script id="overlay-template" type="text/x-mustache-template">
+      <div class="student-overlay alert alert-dismissible">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+        <p>{{name}}</p>
+        <p>{{program}}</p>
+      </div>
+    </script>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
