--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ P    X          F                K       J              F      J     Y      5   
                 <ul> <!-- this submenu only shows up when in students area -->
                   <li>
                     <div class="input-group">
-                      <input type="text" class="form-control" placeholder="Search <3">
+                      <input id="search-students" type="text" class="form-control" placeholder="Search <3">
                       <span class="input-group-btn">
                         <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
                       </span>
