--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ P    X          F                K       J              F      J     Y      5   
                   </li> <!-- Here's to hoping. -->
                   <li><a href="#" class="sort-studentlist" data-type="all">All Projects</a></li>
                   <li>
-                    <div class="btn-group">
+                    <div class="btn-group dropup">
                       <button type="button" data-type="gallery" class="btn btn-default dropdown-toggle sort-studentlist" data-toggle="dropdown">
                         <a href="#">Program </a><span class="caret"></span>
                       </button>
@@ -99,7 +99,6 @@ P    X          F                K       J              F      J     Y      5   
                         <li><a href="#" data-program="Illustration Practice">Illustration Practice</a></li>
                         <li><a href="#" data-program="MA Teaching">MA Teaching</a></li>
                         <li><a href="#" data-program="Mount Royal">Mount Royal</a></li>
-                        <li><a href="#" data-program="Photo & Electronic Media">Photo & Electronic Media</a></li>
                         <li><a href="#" data-program="Photo & Electronic Media">Photo & Electronic Media</a></li>
                         <li><a href="#" data-program="Post Bac FA">Post Bac FA</a></li>
                         <li><a href="#" data-program="Post Bac GD">Post Bac GD</a></li>
@@ -121,6 +120,7 @@ P    X          F                K       J              F      J     Y      5   
                         <li><a href="#" data-gallery="Meyerhoff">Meyerhoff</a></li>
                         <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>                
                         <li><a href="#" data-gallery="Riggs">Riggs/Leidy</a></li>
+                        <li><a href="#" >Off Campus</a></li><!-- this needs to be the curatorial practice students -->
                       </ul>
                     </div>
                   </li>
