drop up will hopefully work...

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ P    X          F                K       J              F      J     Y      5   
                     </div>
                   </li>
                   <li>
-                    <div class="btn-group">
+                    <div class="btn-group dropup">
                       <button type="button" data-type="gallery" class="btn btn-default dropdown-toggle sort-studentlist" data-toggle="dropdown">
                         <a href="#">Gallery </a><span class="caret"></span>
                       </button>
@@ -125,7 +125,7 @@ P    X          F                K       J              F      J     Y      5   
                     </div>
                   </li>
                   <li>
-                    <div class="btn-group">
+                    <div class="btn-group dropup">
                       <button type="button" data-type="gallery" class="btn btn-default dropdown-toggle sort-studentlist" data-toggle="dropdown">
                         <a href="#">Show Date </a><span class="caret"></span>
                       </button>
