--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ P    X          F                K       J              F      J     Y      5   
               <li><a href="#intro">Welcome</a></li>
               <li><a href="#schedule">Schedule</a></li>
               <li><a href="#galleries">Galleries</a></li>
-              <li><a href="#students">Students: Dream Nav</a>
+              <li><a href="#students">Students</a>
                 <ul> <!-- this submenu only shows up when in students area -->
                   <li>
                     <div class="input-group">
