quick tweak to overlay

--- a/index.html
+++ b/index.html
@@ -286,9 +286,9 @@ P    X          F                K       J              F      J     Y      5   
                 <li>IMAGES! take use {{_id}} to match with Images...</li>
               </ul>
         
-              <article>
-                <p>{{ websitelongstatementupto500words }}</p>
-                <ul>
+              <article class="row">
+                <p class="col-sm-9">{{ websitelongstatementupto500words }}</p>
+                <ul class="col-sm-3">
                   <li>{{ list of other people from same program }}</li>
                 </ul>
               </article>
