--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ P    X          F                K       J              F      J     Y      5   
                 <li>IMAGES! take use {{_id}} to match with Images...</li>
               </ul>
         
-              <article>
+              <article class="row">
                 <p>{{ websitelongstatementupto500words }}</p>
                 <ul>
                   {{#peers}}
