--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@ P    X          F                K       J              F      J     Y      5   
         
               <article class="row">
                 <p>{{ websitelongstatementupto500words }}</p>
-                <ul>
+                <ul class="program-peers">
                   {{#peers}}
-                  <li>{{ firstname }} {{ lastname }}</li>
+                  <li>{{ firstname }} {{ lastname }} <span style="display:none" class="id">{{_id}}</span></li>
                   {{/peers}}
                 </ul>
               </article>
