--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ P    X          F                K       J              F      J     Y      5   
           
                 <article class="row">
                   <p>{{ websitelongstatementupto500words }}</p>
-                  <ul>
+                  <ul class="program-peers">
                     {{#peers}}
                     <li>{{ firstname }} {{ lastname }}</li>
                     {{/peers}}
