--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ P    X          F                K       J              F      J     Y      5   
                   <p>{{ websitelongstatementupto500words }}</p>
                   <ul class="program-peers">
                     {{#peers}}
-                    <li>{{ firstname }} {{ lastname }}</li>
+                    <li>{{ firstname }} {{ lastname }} <span style="display:none" class="id">{{_id}}</span></li>
                     {{/peers}}
                   </ul>
                 </article>
