--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ P    X          F                K       J              F      J     Y      5   
       <div class="row">
         
         <div class="col-sm-2">
-          <nav class="mainnav" data-spy="affix" data-offset-top="399" data-offset-bottom="305">
+          <nav class="mainnav" data-spy="affix" data-offset-top="399">
             <ul class="nav nav-stacked nav-pills">
               <li><a href="#intro">Welcome</a></li>
               <li><a href="#schedule">Schedule</a></li>
