columns for text and related people

--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@ P    X          F                K       J              F      J     Y      5   
               </ul>
         
               <article class="row">
-                <p>{{ websitelongstatementupto500words }}</p>
-                <ul>
+                <p class="col-sm-9">{{ websitelongstatementupto500words }}</p>
+                <ul class="col-sm-3">
                   {{#peers}}
                   <li>{{ firstname }} {{ lastname }}</li>
                   {{/peers}}
