--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ P    X          F                K       J              F      J     Y      5   
         
               <article class="row">
                 <p class="col-sm-9">{{ websitelongstatementupto500words }}</p>
-                <ul class="col-sm-3">
+                <ul class="col-sm-3 program-peers">
                   {{#peers}}
                   <li>{{ firstname }} {{ lastname }}</li>
                   {{/peers}}
