Add active class to active student in peer list

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ P    X          F                K       J              F      J     Y      5   
                 <p class="col-sm-9">{{ websitelongstatementupto500words }}</p>
                 <ul class="col-sm-3 program-peers">
                   {{#peers}}
-                  <li>{{ firstname }} {{ lastname }} <span style="display:none" class="id">{{_id}}</span></li>
+                  <li>{{ firstname }} {{ lastname }} <span id="id-{{_id}}" style="display:none" class="id">{{_id}}</span></li>
                   {{/peers}}
                 </ul>
               </article>
