--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ P    X          F                K       J              F      J     Y      5   
                         <li><a href="#" data-gallery="Fox">Fox 3</a></li>
                         <li><a href="#" data-gallery="Leidy">Leidy</a></li>
                         <li><a href="#" data-gallery="Meyerhoff">Meyerhoff</a></li>
-                        <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>                
+                        <li><a href="#" data-gallery="Pinkard">Pinkard</a></li>
                         <li><a href="#" data-gallery="Riggs">Riggs/Leidy</a></li>
                         <li><a href="#" >Off Campus</a></li><!-- this needs to be the curatorial practice students -->
                       </ul>
@@ -315,8 +315,8 @@ P    X          F                K       J              F      J     Y      5   
               </div>
               
               <article class="row">
-                <p class="col-sm-9">{{ websitelongstatementupto500words }}</p>
-                <ul class="col-sm-3 program-peers">
+                <p class="col-sm-8">{{ websitelongstatementupto500words }}</p>
+                <ul class="col-sm-3 col-sm-offset-1 program-peers">
                   {{#peers}}
                   <li>{{ firstname }} {{ lastname }} <span id="id-{{_id}}" style="display:none" class="id">{{_id}}</span></li>
                   {{/peers}}
