--- a/index.html
+++ b/index.html
@@ -279,10 +279,10 @@ P    X          F                K       J              F      J     Y      5   
               </div>
             </div>
         
-            <div class="col-sm-9 col-sm-offset-1">
+            <div class="col-sm-9">
 
               <div class="row">
-                <div class="col-sm-8">
+                <div class="col-sm-10">
                   <p>IMAGES! take use {{_id}} to match with Images...</p>
                   <div id="slideshow" class="carousel slide" data-ride="carousel">
                     <!-- Indicators -->
@@ -318,8 +318,8 @@ P    X          F                K       J              F      J     Y      5   
               </div>
             
               <article class="row">
-                <p class="col-sm-8">{{ websitelongstatementupto500words }}</p>
-                <ul class="col-sm-3 col-sm-offset-1 program-peers">
+                <p class="col-sm-8 col-sm-offset-1">{{ websitelongstatementupto500words }}</p>
+                <ul class="col-sm-2 col-sm-offset-1 program-peers">
                   {{#peers}}
                   <li>{{ firstname }} {{ lastname }} <span id="id-{{_id}}" style="display:none" class="id">{{_id}}</span></li>
                   {{/peers}}
