--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ P    X          F                K       J              F      J     Y      5   
         <div class="container">
           <div class="row">
         
-            <div class="col-xs-12 col-sm-4 col-md-8">
+            <div class="col-xs-12 col-sm-4 col-md-2">
               <div>
                 <h2>{{ firstname }}</h2>
                 <h2>{{ middlename }}</h2>
@@ -320,7 +320,7 @@ P    X          F                K       J              F      J     Y      5   
 
             <div class="clearfix visible-sm"></div>
             
-            <aside class="col-xs-12 col-sm-8 col-sm-offset-4 col-md-2">
+            <aside class="col-xs-12 col-sm-8 col-sm-offset-4 col-md-2 col-md-offset-0">
               <ul class="program-peers">
                 {{#peers}}
                 <li>{{ firstname }} {{ lastname }} <span id="id-{{_id}}" style="display:none" class="id">{{_id}}</span></li>
