better styling for mobile

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ P    X          F                K       J              F      J     Y      5   
             <ul class="list row grid-display" id="projects-demo">
               <script id="students-template" type="text/x-mustache-template">
                 {{#students}}
-                <li class="col-sm-3 student thumb {{id}}">
+                <li class="col-xs-6 col-sm-3 student thumb {{id}}">
                   <div class="block">
                     <img src="img/thumbnails/{{_id}}.jpg" /> <!-- decent start to thumbnails -->
                     <div class="info">
