will this center the header images?

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ P    X          F                K       J              F      J     Y      5   
   
   <body data-spy="scroll" data-target=".mainnav">
 
-    <header>
+    <header class="text-center">
       <img src="img/headers/id0445714.jpg" class="backgroundfill">
       <img src="img/headers/id0516545_2.jpg" class="backgroundfill">
       <img src="img/headers/id0479534.jpg" class="backgroundfill">
