add link to curatorial practice more info page

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ P    X          F                K       J              F      J     Y      5   
                     <li><p><a href="https://www.google.com/maps/place/18+W+North+Ave/@39.3111576,-76.6171982,17z/data=!3m1!4b1!4m2!3m1!1s0x89c804ea61df87b5:0xfb5919f46f01192">18 W. North Ave. <br/>Baltimore, MD 21218</a></p></li>
                     <li><h4>Off Campus</h4></li>
                     <li><h5>Curatorial Practice</h5></li>
-                    <li><p>Curatorial Students take over individual galleries all across Baltimore. <a href="pdf/########tk">View the Curatorial Map »</a></p></li>
+                    <li><p>Curatorial Students take over individual galleries all across Baltimore. <a href="http://www.micacuratorial.org/class-2014.html">Details on Individual Curatorial Student Exhibitions »</a></p></li>
                 </ul>
               </div>
             </section>
