--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@ P    X          F                K       J              F      J     Y      5   
             <div class="clearfix visible-sm"></div>
             
             <aside class="col-xs-12 col-sm-8 col-sm-offset-4 col-md-2 col-md-offset-0	">
+              <h4>{{program}}</h4>
               <ul class="program-peers">
                 {{#peers}}
                 <li>{{ firstname }} {{ lastname }} <span id="id-{{_id}}" style="display:none" class="id">{{_id}}</span></li>
