--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ P    X          F                K       J              F      J     Y      5   
               </div><!-- end SS -->
 
               <article class="row">
-                <p class="col-sm-10 col-sm-offset-1">{{ websitelongstatementupto500words }}</p>
+                <p class="col-xs-12 col-md-10 col-md-offset-1">{{ websitelongstatementupto500words }}</p>
               </article>
         
             </div> <!-- end center column with images and texts -->
