--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@ P    X          F                K       J              F      J     Y      5   
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/hash.min.js"></script>
     <script src="js/lodash.min.js"></script>
     <script src="js/list.min.js"></script>
     <script src="js/hogan.min.js"></script>
