--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ P    X          F                K       J              F      J     Y      5   
                   <li>{{ personalemail }}</li>
                 </ul>
         
-                <ul>
+                <ul class="student-nav">
                   <li><span class="glyphicon glyphicon-chevron-left"></span></li>
                   <li><span class="glyphicon glyphicon-random"></span></li>
                   <li><span class="glyphicon glyphicon-chevron-right"></span></li>
