Offset for scrollspy

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ P    X          F                K       J              F      J     Y      5   
     
   </head>
   
-  <body data-spy="scroll" data-target=".mainnav">
+  <body data-spy="scroll" data-target=".mainnav" data-offset="160">
 
     <header class="text-center">
       <img src="img/headers/id0445714.jpg" class="backgroundfill">
