--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@ P    X          F                K       J              F      J     Y      5   
               <h4>{{program}}</h4>
               <ul class="program-peers">
                 {{#peers}}
-                <li>{{ firstname }} {{ lastname }} <span id="id-{{_id}}" style="display:none" class="id">{{_id}}</span></li>
+                <li>{{name}}<span id="id-{{_id}}" style="display:none" class="id">{{_id}}</span></li>
                 {{/peers}}
               </ul>
             </aside>
