remove errant + sign

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ P    X          F                K       J              F      J     Y      5   
                     <li><h5>Decker Gallery</h5></li>
                     <li><h5>Fox 3 Gallery</h5></li>
                     <li><h5>Meyerhoff Gallery</h5></li>
-+                    <li><p><a target="_blank" href="https://www.google.com/maps/place/Decker+and+Meyerhoff+Galleries/@39.3080133,-76.621262,18z/data=!4m2!3m1!1s0x0:0x6e7b0c3da90d8dd1">1303 W. Mount Royal Ave. <br/>Baltimore, MD 21217</a></p></li>
+                    <li><p><a target="_blank" href="https://www.google.com/maps/place/Decker+and+Meyerhoff+Galleries/@39.3080133,-76.621262,18z/data=!4m2!3m1!1s0x0:0x6e7b0c3da90d8dd1">1303 W. Mount Royal Ave. <br/>Baltimore, MD 21217</a></p></li>
                   </ul>
                   <ul>
                     <li><h4>Studio Center</h4></li>
