--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@ P    X          F                K       J              F      J     Y      5   
                 </ul>
 
                 <ul>
-                  <li>{{ urlofpersonalwebsite }}</li>
-                  <li>{{ personalemail }}</li>
+                  <li><a href="#">{{ urlofpersonalwebsite }}</a></li>
+                  <li><a href="#">{{ personalemail }}</a></li>
                 </ul>
         
                 <ul class="student-nav">
@@ -394,7 +394,7 @@ P    X          F                K       J              F      J     Y      5   
             </div>
         
             <div class="col-xs-12 col-sm-8 col-md-9">
-              <p>IMAGES! take use {{_id}} to match with Images...</p>
+              <p>use ID {{_id}} to match with related Images... need to make this dynamic to # of images it may load... and also acknowldege that a few people won't have images, so it much hide the slideshow area all together</p>
               <div id="slideshow" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ol class="carousel-indicators">
