icons for email/website

--- a/index.html
+++ b/index.html
@@ -379,9 +379,9 @@ P    X          F                K       J              F      J     Y      5   
                   <li>{{showdate}}</li>
                 </ul>
 
-                <ul>
-                  <li><a href="#">{{ urlofpersonalwebsite }}</a></li>
-                  <li><a href="#">{{ personalemail }}</a></li>
+                <ul class="student-links">
+                  <li><a href="{{ urlofpersonalwebsite }}"><span class="glyphicon glyphicon-cloud"></span></a></li>
+                  <li><a href="mailto:{{ personalemail }}"><span class="glyphicon glyphicon-send"></span></a></li>
                 </ul>
         
                 <ul class="student-nav">
