temporarily show the ID

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ P    X          F                K       J              F      J     Y      5   
                       <p class="program">{{program}}</p>
                       <p class="exhibitionlocation">{{exhibitionlocation}}</p>
                       <p class="show-date showdate">{{showdate}}</p>
-                      <p class="id" style="display:none">{{id}}</p>
+                      <p class="id">{{id}}</p>
                     </div>
                   </div>
                 </li>
