--- a/index.html
+++ b/index.html
@@ -405,9 +405,9 @@ P    X          F                K       J              F      J     Y      5   
       <div class="container">
         <div class="row">
           <img class="col-xs-8 col-xs-offset-2 col-sm-2 col-sm-offset-0" src="img/mica_lockup_transp.png" />
-          <p class="col-xs-12 col-sm-2 col-sm-offset-6">Built and designed by <br/><a href="#" target="_blank">YZ</a>, <a href="#" target="_blank">RB</a>, <a href="http://www.nourtabet.com" target="_blank">NT</a>, <a href="http://www.sherwoodandforbes.com" target="_blank">ESF</a>, and the <a href="http://www.ookb.co" target="_blank">fine folks at the OOKB</a>.</p>          
+          <p class="col-xs-12 col-sm-2 col-sm-offset-6">Built and designed by <br/><a href="http://yingxizhou.info" target="_blank">YZ</a>, <a href="http://studiorichb.com/" target="_blank">RB</a>, <a href="http://www.nourtabet.com" target="_blank">NT</a>, <a href="http://www.sherwoodandforbes.com" target="_blank">ESF</a>, and the <a href="http://www.ookb.co" target="_blank">fine folks at the OOKB</a>.</p>          
           <ul class="col-xs-12 col-sm-2">
-            <li>Office of Graduate Studies</li>
+            <li>Office of Grad Studies</li>
             <li>131 West North Avenue</li>
             <li>Baltimore, MD 21201</li>
             <li>410.225.5274</li>
