--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ P    X          F                K       J              F      J     Y      5   
             <li>Office of Grad Studies</li>
             <li>131 West North Avenue</li>
             <li>Baltimore, MD 21201</li>
-            <li>410.225.5274</li>
+            <li><a href="tel:+14102255274">410.225.5274</a></li>
           </ul>
         </div>
       </div>
