made all links to new stuff target blank

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ P    X          F                K       J              F      J     Y      5   
               <li class="row showtime">
                 <div class="col-sm-4">
                   <h3><date>02/01/2014</date>&ndash;<date>05/09/2014</date></h3>
-                  <p class="small">Ongoing. <a href="http://www.micacuratorial.org/class-2014.html">Curatorial Students take over individual galleries all across Baltimore at different times »</a></p>
+                  <p class="small">Ongoing. <a href="http://www.micacuratorial.org/class-2014.html" target="_blank">Curatorial Students take over individual galleries all across Baltimore at different times »</a></p>
                 </div>
                 <div class="col-sm-8">
                   <p class="lead">Curatorial Practice MFA</p>
@@ -407,7 +407,7 @@ P    X          F                K       J              F      J     Y      5   
                   <ul>
                     <li><h4>Off Campus</h4></li>
                     <li><h5>Curatorial Practice</h5></li>
-                    <li><p>Curatorial Students take over individual galleries all across Baltimore. <a href="http://www.micacuratorial.org/class-2014.html">Details on Individual Curatorial Student Exhibitions »</a></p></li>
+                    <li><p>Curatorial Students take over individual galleries all across Baltimore. <a href="http://www.micacuratorial.org/class-2014.html"  target="_blank">Details »</a></p></li>
                   </ul>
                 </div>
               </div>
@@ -484,8 +484,8 @@ P    X          F                K       J              F      J     Y      5   
                 </ul>
 
                 <ul class="student-links nav nav-pills">
-                  {{#urlofpersonalwebsite}}<li><a target="_blank" href="{{ urlofpersonalwebsite }}"><span class="glyphicon glyphicon-cloud"></span></a></li>{{/urlofpersonalwebsite}}
-                  {{#personalemail}}<li><a target="_blank" href="mailto:{{ personalemail }}"><span class="glyphicon glyphicon-send"></span></a></li>{{/personalemail}}
+                  {{#urlofpersonalwebsite}}<li><a target="_blank" href="{{ urlofpersonalwebsite }}"  target="_blank"><span class="glyphicon glyphicon-cloud"></span></a></li>{{/urlofpersonalwebsite}}
+                  {{#personalemail}}<li><a target="_blank" href="mailto:{{ personalemail }}"  target="_blank"><span class="glyphicon glyphicon-send"></span></a></li>{{/personalemail}}
                 </ul>
         
               </div>
